# damlab-wrappers

./: .gitignore  CHANGELOG.md  README.md  Snakefile  environment.yaml
CRISPR/crispresso-aggregate/: README.md  wrapper.py
CRISPR/crispresso-compare/: README.md  environment.yaml  wrapper.py
CRISPR/crispresso-core/: README.md  wrapper.py
MSA/muscle/: CHANGELOG.md  wrapper.py
barcode/: valid.bam
barcode/correct/: CHANGELOG.md
barcode/extract/: CHANGELOG.md  README.md  wrapper.py
cigarmath/: deletion_block_detection.ipynb
cigarmath/bam2csv/: CHANGELOG.md  README.md  environment.yaml  wrapper.py
cigarmath/bam2fastx/: CHANGELOG.md  README.md  environment.yaml  wrapper.py
cigarmath/bam2gel/: CHANGELOG.md  README.md  environment.yaml  wrapper.py
cigarmath/deletion_block_detection/: CHANGELOG.md  README.md  environment.yaml  wrapper.py
cigarmath/deletion_frequency/: CHANGELOG.md  wrapper.py
cigarmath/maximal_deletion_size/: CHANGELOG.md  README.md  environment.yaml  wrapper.py
cigarmath/pileup/: CHANGELOG.md
cigarmath/slice/: CHANGELOG.md
dorado/demux/: CHANGELOG.md  wrapper.py
dorado/duplex/: CHANGELOG.md
dorado/simplex/: CHANGELOG.md  wrapper.py
multiqc_plugins/: pyproject.toml
multiqc_plugins/damlabqc/: hook.py
multiqc_plugins/damlabqc/modules/deletion_block_detection/: __init__.py  deletion_block_detection.py
multiqc_plugins/damlabqc/modules/deletion_frequency/: deletion_frequency.py
workflows/: proviral_crispr.md  proviral_crispr.smk  proviral_nfl.md  proviral_nfl.smk  proviral_reconstruction.md  proviral_reconstruction.smk
(+157 files in other folders)
