[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "damlabqc"
version = "0.1.0"
authors = [
    {name = "DAMlab", email = "wnd22@drexel.edu"},
]
description = "MultiQC plugin for DAMlab wrappers"
requires-python = ">=3.7"
dependencies = [
    "multiqc>=1.27",
    "click>=7.0",
]

[tool.setuptools]
packages = ["damlabqc"]
include-package-data = true

[project.entry-points."multiqc.modules.v1"]
strainline = "damlabqc.modules.strainline:MultiqcModule"
dorado = "damlabqc.modules.dorado:MultiqcModule"
deletion_frequency = "damlabqc.modules.deletion_frequency:MultiqcModule"
hivmetrics = "damlabqc.modules.hivmetrics:MultiqcModule"
generic = "damlabqc.modules.generic:MultiqcModule"
primercheck = "damlabqc.modules.primercheck:MultiqcModule"
metaqc = "damlabqc.modules.metaqc:MultiqcModule"
intactness = "damlabqc.modules.intactness:MultiqcModule"
barcode = "damlabqc.modules.barcode:MultiqcModule"
hivbert = "damlabqc.modules.hivbert:MultiqcModule"
slice = "damlabqc.modules.slice:MultiqcModule"
deletion_block_detection = "damlabqc.modules.deletion_block_detection:MultiqcModule"

[project.entry-points."multiqc.cli_options.v1"]
debug_option = "damlabqc.cli:debug_option"

[project.entry-points."multiqc.hooks.v1"]
execution_start = "damlabqc.hook:add_config" 